config/test/network-policy/allow-egress-kube-apiserver.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-to-api-server
  namespace: system
spec:
  podSelector:
    matchLabels:
      app: kubemacpool
  policyTypes:
  - Egress
  egress:
  - ports:
    - protocol: TCP
      port: 6443
