config/test/network-policy/default-deny-all.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: system
spec:
  podSelector:
    matchLabels:
      app: kubemacpool
  policyTypes:
  - Egress
  - Ingress
